square dummy content + slick slider arrow fix

--- a/public/design/start_page_slider.html
+++ b/public/design/start_page_slider.html
@@ -186,7 +186,7 @@
 
         <div class="col-md-6">
           <div class="list_item">
-            <a href="#"><img src="/assets/scriv-uno/dummy_square6.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/square_01.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h3 class="h2"><a href="#">Focus Group 01</a></h3>
               <p>IFCOl im ipsum dolor sit amte dor sita lorem doro am tusa lisat. Lormor amet lorem  ipsum
@@ -196,7 +196,7 @@
         </div>
         <div class="col-md-6">
           <div class="list_item">
-            <a href="#"><img src="/assets/scriv-uno/dummy_square1.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/square_02.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h3 class="h2"><a href="#">Focus Group 02</a></h3>
               <p>IFCOl im ipsum dolor sit amte dor sita lorem doro am tusa lisat. Lormor amet lorem  ipsum
@@ -218,7 +218,7 @@
         <div class="col-md-4">
           <div class="headline"><h3>latest news</h3></div>
           <div class="list_item">
-            <a href="#"><img src="/assets/scriv-uno/dummy_square4.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/square_03.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h4><a href="#">United Fresh Marketplace ...</a></h4>
               <span class="meta">Chicago - 22. - 30.09.2014</span>
@@ -226,7 +226,7 @@
             </div>
           </div>
           <div class="list_item">
-            <a href="#"><img src="/assets/scriv-uno/dummy_square5.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/square_04.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h4><a href="#">Defense Commissary Agency Sees Environmental and ...</a></h4>
               <span class="meta">22.04.2014</span>
@@ -234,7 +234,7 @@
             </div>
           </div>
           <div class="list_item">
-            <a href="#"><img src="/assets/scriv-uno/dummy_square6.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/square_01.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h4><a href="#">IFCO Joins California Produce Growers to Help Ag Against</a></h4>
               <span class="meta">22.04.2014</span>
@@ -321,7 +321,7 @@
 
 
           </div>
-          <div class="box_grey">
+          <div class="box_green">
             <h4 class="h3">Lorem Ipsum</h4>
             <p>
               gls ggs dfz ndsl nzdfo non ognd odu ngfod nhgpfh ugfoh
@@ -410,41 +410,41 @@
 
   					<div>
   					  <a href="#">
-  					    <img src="/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
+  					    <img src="/assets/scriv-uno/square_01.jpg" alt="" class="square">
   					    <p class="h4">Lorem & Ipsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/square_02.jpg" alt="" class="img-responsive">
   					    <p class="h4">Dairy</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/square_03.jpg" alt="" class="img-responsive">
   					    <p class="h4">Meat & Lorem</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/square_01.jpg" alt="" class="img-responsive">
   					    <p class="h4">Very</p>
   					  </a>
   					</div>
             <div>
   					  <a href="#">
-  					    <img src="/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/square_04.jpg" alt="" class="img-responsive">
   					    <p class="h4">Lorpsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/square_03.jpg" alt="" class="img-responsive">
   					    <p class="h4">Morem Pipsum </p>
   					  </a>
   					</div>
